Swagger code gen cmd
